[package]
name = "trek"
description = "The universal package manager 🌳"
authors = ["Clover Johnson <clover.johnson@mailfence.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
clap = { version = "4.5.21", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
flate2 = "1.0.35"
futures = "0.3.31"
indicatif = "0.17.9"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
